vyne-parent/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
@import "../theme";

.component-container {
  height: 100%;
  display: flex;
  flex-direction: column;
}

mat-toolbar {
  flex: 0 0 96px;
}


.source-viewer {
  height: 100%;
  overflow-y: scroll;
}

.page-content  {
  flex: 1;
  display: flex;
}
.endpoint-list {
  background-color: $light-purple-grey;
  border: 1px solid $light-purple-grey-300;
  width: 250px;
  height: 100%;
  padding: 20px;

  .add-new {
    padding-bottom: 20px;
  }
}

:host .drop-down-toggle {
  .mat-button-toggle-label-content {
    padding: 0;
  }
}

.schema-list-member {
  padding: 10px;
  border-bottom: 1px solid $light-purple-grey-300;

  &:hover {
    background-color: rgba($dark-grey-2, 0.1);
    cursor: pointer;
  }

  &.selected {
    border-radius: 3px;
    padding: 8px;
    border: 2px solid $vyne-lilac;
    background-color: rgba($vyne-lilac, 0.1);
  }
}

.schema-name {
  padding-right: 20px;
}

.page-content {
  padding: 0px;
}

.empty-state {
  text-align: center;
  width: 500px;
  font-size: 1.4rem;
  opacity: 0.5;
  margin: auto;

  img {
    width: 256px;
    opacity: 0.4;
  }
}

